Add section for colour calibration. Move perspective to own section.

--- a/article/content/movement.tex
+++ b/article/content/movement.tex
@@ -3,6 +3,9 @@
 \section{Bewegung}
 \label{sec:movement}
 
+% TODO: Einleitungssatz
+
+
 \subsection{Iteration 1: Vorwärts und 90°-Drehung}
 \label{sec:move-straight-turn}
 
@@ -326,3 +329,7 @@ Eine Selbstortung wäre durch mindestens drei weitere Beacon"=Dezibots denkbar, 
 % Zusammenfassung
 
 Zusammenfassend unterscheiden sich die genannten Ansätze in ihrer Komplexität. In der begrenzten Projektzeit war es nicht möglich, diese weiter zu verfolgen, weshalb sie Forschungsgegenstand zukünftiger Projekte sein könnten.
+
+
+\subsection{Iteration 5: Kalibrierung der Farben}
+\label{sec:color-calibration}
