--- a/article/main.tex
+++ b/article/main.tex
@@ -17,6 +17,7 @@
 \input{content/structure.tex}
 \input{content/chess_logic.tex}
 \input{content/movement.tex}
+\input{content/perspective.tex}
 \input{content/conclusion.tex}
 
 \printbibliography[heading=bibintoc]
