--- a/article/content/conclusion.tex
+++ b/article/content/conclusion.tex
@@ -1,6 +1,6 @@
 % !TeX root = ../main.tex
 
-\section{Fazit und Ausblick}
-\label{sec:conclusion} \label{sec:perspective}
+\section{Fazit}
+\label{sec:conclusion}
 
 \lipsum[1]
