Add move straight and turn section and Fix typos.

--- a/article/content/chess_logic.tex
+++ b/article/content/chess_logic.tex
@@ -163,6 +163,6 @@ Damit sichtbar ist welche Schachfigur ein Dezibot simuliert, wird diese auf dem 
     \label{fig:display-queen-knight-bishop}
 \end{figure}
 
-Um die Farben der Spielfiguren zu unterschieden wird das Display für weiße Figuren mit der Funktion \texttt{display.invert"-Color} invertiert, sodass die Zeichen und Schrift schwarz auf weiß angezeigt wird. Invertiert wird das Display bei der Konstruktion einer Schachfigur, wobei dessen Notwendigkeit mit Hilfe der Flag \texttt{display::colorInverted} überprüft wird.
+Um die Farben der Spielfiguren zu unterschieden wird das Display für weiße Figuren mit der Funktion \texttt{display::""invert"-Color} invertiert, sodass die Zeichen und Schrift schwarz auf weiß angezeigt wird. Invertiert wird das Display bei der Konstruktion einer Schachfigur, wobei dessen Notwendigkeit mit Hilfe der Flag \texttt{display::""color"-Inverted} überprüft wird.
 
 Da die Figur möglichst immer angezeigt werden soll, wird die Funktion \texttt{ECP"-Chess"-Piece::""draw"-Figure"-To"-Display} immer aufgerufen, nachdem möglicherweise das Display überschrieben wurde (vgl. \autoref{sec:plausibility-check-rotation}).
