--- a/shared/bibliography.bib
+++ b/shared/bibliography.bib
@@ -81,3 +81,13 @@
   langid = {english},
   organization = {Matplotlib 3.10.0 documentation}
 }
+
+@online{ridpathTechniquesAccessibilityEvaluation2000,
+  title = {Techniques {{For Accessibility Evaluation And Repair Tools}}},
+  author = {Ridpath, Chris and Chisholm, Wendy},
+  date = {2000-04-26},
+  location = {World Wide Web Consortium},
+  url = {https://www.w3.org/TR/2000/WD-AERT-20000426#color-contrast},
+  urldate = {2024-10-29},
+  pubstate = {prepublished}
+}
