--- a/article/main.tex
+++ b/article/main.tex
@@ -20,6 +20,11 @@
 \input{content/perspective.tex}
 \input{content/conclusion.tex}
 
+\newpage
+\appendix
+\pagenumbering{Roman}
+\input{content/appendix.tex}
+
 \printbibliography[heading=bibintoc]
 
 \end{document}
