--- a/article/header/packages.tex
+++ b/article/header/packages.tex
@@ -41,6 +41,8 @@
 % vertical padding in tables
 \renewcommand{\arraystretch}{1.2}
 
+\usepackage{multirow}
+
 % Fix overfull hbox in references
 % https://tex.stackexchange.com/questions/171999/overfull-hbox-in-biblatex#comment397014_171999
 \usepackage[final]{microtype}
